# DNS

./: .dockerignore  Dockerfile  README.md  benchmark_90k.sh  deploy.sh  diff.txt  docker-compose.yml  laman_labuh.lua  laman_labuh3.lua  laman_labuh_nx.lua  supervisord.conf  sysctl-dns-optimize.sh  test_hash.go  test_hash.lua  test_rpz.zone  test_rpz2.zone
.local_dnsdist/: dnsdist.tar.bz2
.local_dnsdist/dnsdist-1.9.4/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  dnsdist-lua-ffi-interface.inc  dnsdist.1  dnslabeltext.cc  htmlfiles.h
.local_dnsdist/dnsdist-1.9.4/ext/arc4random/: Makefile.in
.local_dnsdist/dnsdist-1.9.4/ext/ipcrypt/: Makefile.in
.local_dnsdist/dnsdist-1.9.4/ext/yahttp/: Makefile.in
.local_dnsdist/dnsdist-1.9.4/ext/yahttp/yahttp/: Makefile.in
data/: netshield.db
frontend/: build_err.txt  fix_slashes.cjs  index.html  new_dashboard.txt  package-lock.json  package.json  replace_ui_final.cjs  rewrite.cjs  rewrite_ui2.cjs  rewrite_ui3.cjs  rewrite_ui5.cjs  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/pages/: Zones.jsx
go-api/: bloom_sync.go  go.mod  go.sum  main.go  template_generator.go  xdp_sync.go  zones.go
iso-builder/: build-iso.sh  tui-wizard.sh
pdns_config/: allowed_ips.txt  bloom_native.c  dnsdist.conf  laman_labuh.lua  main.lua  recursor.conf  unbound.conf
rust-edge/: Cargo.toml
rust-edge/src/: main.rs
xdp/: dns_filter.c  setup_xdp_host.sh  xdp_manager.sh
