[package]
name = "rust-edge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ahash = "0.8"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }

# Extreme performance compilation
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
